# ratbag-python

./: .buildinfo  .editorconfig  Makefile  README.html  README.md  config-logger.yml  example-config-logger.yml  example-device-config.yml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  ratbag.drivers.html  ratbag.html  ratbagcli.py  ratbagd  ratbagd.py  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: checks.yml  pages.yml
_sources/: README.md.txt  index.rst.txt  modules.rst.txt  ratbag.drivers.rst.txt  ratbag.rst.txt
config/: defaults.yml
dbus/: hid-opener.py  org.freedesktop.libratbag.policy  org.freedesktop.ratbag1.conf
doc/: conf.py  index.rst
ratbag/: __init__.py  driver.py  emulator.py  hid.py  parser.py  recorder.py  util.py
ratbag/cli/: ratbagcli.py  ratbagd.py
ratbag/drivers/: __init__.py  example_driver.py  hidpp10.py  hidpp20.py  openinput.py  roccat.py  sinowealth.py
tests/: test_hid.py  test_hidpp20.py  test_ratbag.py  test_ratbagcli.py  test_ratbagd.py  test_roccat.py  test_util.py
udev/: 70-ratbag.hwdb  70-ratbag.hwdb.in  80-ratbag.rules  ratbag-generate-hwdb
