[metadata]
name = ratbag
version = 0.0.1
author = Peter Hutterer
author_email = peter.hutterer@redhat.com
description = Gaming mouse configuration daemon
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/libratbag/libratbag
project_urls =
    Bug Tracker = https://github.com/libratbag/libratbag/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
license = MIT License

[options]
packages = find:
python_requires = >=3.6
include_package_data = true
scripts =
   ratbagcli.py
   ratbagd.py

[options.package_data]
ratbag = devices/*.device

[mypy]
ignore_missing_imports = true
